# TinTown

./: .gitignore  CRITICAL_TIMING_ISSUE_ADDENDUM.md  DEVELOPMENT_SCRIPT_DOCUMENTATION.md  DEVELOPMENT_SYSTEM_COMPLETE.md  DEV_TOOLS_DOCUMENTATION.md  ENHANCED_TIMING_READY.md  FEATURES_BACKLOG.md  IMPACT_ANALYSIS_SUMMARY.md  PI_TEST_PROCEDURE.md  RANGE_SESSION_SUMMARY_20250911.md  README.md  STATISTICAL_TIMING_SUMMARY.md  TIMING_BUG_FIXED.md  TIMING_INTEGRATION_STATUS.md  analyze_bt50.py  analyze_bt50_scale.py  analyze_hammer_test.py  analyze_shots.ps1  analyze_shots.py  bt50_enhanced_data.csv  bt50_sensor_data.csv  bt50_xyz_data.csv  config.example.yaml  create_enhanced_csv.ps1  deploy_timing_to_pi.sh  extract_bt50.ps1  extract_bt50_data.py  extract_impact_samples.py  latest_test.ndjson  latest_timing_calibration.json  pyproject.toml  shot_detection_results.txt  statistical_offset_analysis.py  test_bridge.py  test_bt50_parse.py  test_complete_system.sh  test_corrected_bt50.py  test_device_ids.py  test_import.py  test_parser_fix.py  (+6 more)
config/: config_dual_logging.yaml  development.yaml
doc/: README.md  handoff_20250909.md  handoff_20250910.md  handoff_20250911.md  timing_calibration_report.md
scripts/: README.md  bridge.py  dev_bridge.py  event_logger.py  fixed_bridge.py  fixed_bridge_complete.py  fixed_bridge_current.py  fixed_bridge_working.py  inspect_bt50_all.py  inspect_bt50_logs.py  minimal_bridge.py  monitor_bridge.sh  run_bridge.py  run_bridge.sh
tests/: README.md  test_detector.py  test_wtvb_parse.py
tools/: README.md  ble_scan.py  bt50_movement_test.py  (+13 more)
(+17 files in other folders)
